// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H6 renders default h1 1`] = `
.c0 {
  font-size: 17px;
  line-height: 25px;
  font-family: GTCinetype-Light;
  margin-bottom: 12px;
}

<h6
  className="c0"
>
  Title
</h6>
`;

exports[`H6 renders h1 with custom color 1`] = `
.c0 {
  font-size: 17px;
  line-height: 25px;
  font-family: GTCinetype-Light;
  margin-bottom: 12px;
  color: green;
}

<h6
  className="c0"
  color="green"
>
  Title
</h6>
`;
